src/styles/hero.css
/* HERO SECTION */

.hero-section {
  width: 100%;
  padding-top: 1rem;
}

.hero-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 100%;
  margin: 0 auto;
  padding: 0 2rem;
  /* background-color: #ebb17c; */
}

.main-content {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  padding-left: 2rem;
  gap: clamp(2rem, 5vw, 18rem);
}

.text-content {
  display: flex;
  flex-direction: column;
}

.link-content {
  display: flex;
  font-size: 1.5rem;
  padding-top: 2rem;
}

.title {
  font-size: 6rem;
  font-weight: bold;
  background: linear-gradient(to right, #8218eb, #096170, #820e63);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  margin-bottom: 20px;
}

.app-dark .title {
  background: none;
  color: white;
  -webkit-text-fill-color: white;
}

.subtitle {
  font-size: 1rem;
  display: flex;
  padding-left: 2rem;
  align-items: center;
  gap: 0.5rem;
  min-width: 400px;
}

.typing-text {
  font-weight: bold;
  min-width: 200px;
}

.typing-text.red {
  color: #dc2626;
}

.typing-text.orange {
  color: #fb923c;
}

.typing-text.purple {
  color: #9333ea;
}

.typing-text.green {
  color: green;
}

.typing-text.blue {
  color: rgb(61, 117, 195);
}

.typing-text.yellow {
  color: yellow;
}

.cursor {
  color: transparent;
}

.image-container img {
  width: clamp(180px, 20vw, 250px);
  height: auto;
  object-fit: cover;
  border: solid;
  border-color: black;
  transform: rotateZ(5deg);
}

/* Pulse animation for cursor */
@keyframes pulse {
  0%,
  100% {
    opacity: 1;
  }
  50% {
    opacity: 0.5;
  }
}

/* responsive */

/* 890px */

@media (max-width: 769px) {
  .hero-container {
    padding: 0 0.5rem;
  }

  .main-content {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    padding-left: 0;
    gap: clamp(0.25rem, 2vw, 1rem);
  }

  .image-container {
    padding-right: 0;
  }

  .image-container img {
    width: clamp(140px, 15vw, 180px);
    border-width: 2px;
  }

  .title {
    font-size: clamp(2.5rem, 8vw, 4rem);
  }

  .subtitle {
    font-size: clamp(0.8rem, 2.5vw, 1rem);
    padding-left: 1rem;
    min-width: auto;
  }

  .link-content {
    padding-left: 1rem;
  }

  .intro-text {
    font-size: clamp(0.1rem, 3vw, 1.1rem);
    min-width: auto;
  }

  .typing-text {
    font-size: clamp(0.8rem, 2.2vw, 1rem);
    min-width: auto;
  }
}

/* 432px */

@media (max-width: 433px) {
  .hero-container {
    padding: 0 0.5rem;
  }

  .main-content {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    padding-left: 0;
    gap: clamp(0.25rem, 2vw, 1rem);
  }

  .image-container {
    padding-right: 1rem;
  }

  .image-container img {
    width: clamp(120px, 15vw, 180px);
    border-width: 2px;
  }

  .title {
    font-size: clamp(2.5rem, 8vw, 4rem);
  }

  .subtitle {
    font-size: clamp(0.8rem, 2.5vw, 1rem);
    padding-left: 1rem;
    min-width: auto;
  }

  .link-content {
    padding-left: 1rem;
  }

  .intro-text {
    font-size: clamp(0.1rem, 3vw, 1.1rem);
    min-width: auto;
  }

  .typing-text {
    font-size: clamp(0.8rem, 2.2vw, 1rem);
    min-width: auto;
    font-size: 0.65rem;
  }

  .btn-primary {
    font-size: 0.7rem;
  }
}

